# Simple-Linux-SerialPort

./: CMakeLists.txt  Makefile  README.md  read-listener.hpp  serial-port.cpp  serial-port.hpp  test.cpp
include/: read_listener.hpp  serial_port.hpp
src/: serial_port.cpp
src/applications/: test_serial_port.cpp
